# friendly-gql

./: README.rst  pyproject.toml
friendly_gql/: convert.py  test_convert.py
